[project]
name = "langgraph-agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "black>=25.9.0",
    "chromadb>=1.3.0",
    "isort>=7.0.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.2",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.12",
]
